# unicode-lite

./: CMakeLists.txt  README.md
docs/: CMakeLists.txt  sample-utf8-withbom-cyrillic.txt  sample-utf8-withoutbom-cyrillic.txt  test-utf8_to_ucs4_1_bytes.txt  test-utf8_to_ucs4_2_bytes.txt  utf8-converter.txt
gtest/.svn/: wc.db
sources/: CMakeLists.txt  ucs4_to_utf8.c  unicodelite.cpp  unicodelite.h  utf8_to_ucs4.c
tests/: CMakeLists.txt  pragma_once_test.cc  pragma_once_test.h  ucs4_to_utf8_test.cc  utf8_to_ucs4_1_test.cc  utf8_to_ucs4_2_test.cc  utf8_to_ucs4_test.cc  utf8_to_ucs4_test.h
